[gd_scene load_steps=4 format=3 uid="uid://bv0r0d4p2ff1b"]

[ext_resource type="Theme" uid="uid://b66cxik023bhq" path="res://WoodenTheme.tres" id="1_1uwb8"]
[ext_resource type="Script" uid="uid://dnw6s5nyci6sx" path="res://Events/BeetleTradeRandomEvent.gd" id="2_1uwb8"]
[ext_resource type="Texture2D" uid="uid://ctxq61jmha6u2" path="res://Assets/Backgrounds/random_event_3.png" id="3_vs0xh"]

[node name="BeetleTradeRandomEvent" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_1uwb8")
script = ExtResource("2_1uwb8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_vs0xh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndDialog" type="AcceptDialog" parent="CanvasLayer"]
unique_name_in_owner = true
initial_position = 1
theme = ExtResource("1_1uwb8")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -68.0
offset_right = 77.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="BeetleList" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_1uwb8")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1uwb8")

[node name="OpenChest" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OPEN CHEST"

[node name="Leave" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LEAVE"

[connection signal="confirmed" from="CanvasLayer/EndDialog" to="." method="_on_end_dialog_confirmed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/OpenChest" to="." method="_on_endure_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Leave" to="." method="_on_leave_pressed"]
